--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="favicon.ico" /> 
   <link rel="stylesheet" href="styles.css">
   <script src="project-card.js" defer></script>
+  <script src="projects.js" defer></script>
 </head>
 
 <body>
@@ -28,26 +29,21 @@
       <h2>My Projects</h2>
       <p>These are my projects that I worked on my free time</p>
 
-      <div class="project-grid">
-        <project-card
-        title="Moody day"
-        image="images/IMG_4987.jpg"
-        alt="Guy standing outside while the skies are foggy"
-        caption="when the skies are sad, who is there to comfort them?"
-        description="I made this project to make a story about cicumstances in life, where it is okay to be selfish somtimes because 
-            selfcare."
-        highlights="Captured perfect moment of person looking away">
-      </project-card>
+      <p>
+        <button id="load-local">Load Local</button>
+        <button id="load-remote">Load Remote</button>
+      </p>
 
-      <project-card
-        title="Golden hour"
-        image="images/sullyoon.jpg"
-        alt="Girl looking up with her eyes closed to feel the sun's warmth"
-        caption="She's got glow on her face, the angel of light"
-        description="I chose this picture to depict the beauty of my favorite singer."
-        highlights="pink and orange skies">
-      </project-card>
-      </div>
+      <section class="card">
+        <h3>The purpose of the buttons</h3>
+        <p>
+          <strong>Load Local</strong> basically shows the projects that are stored in the browser using <code>localStorage</code>.<br>
+          <strong>Load Remote</strong> takes the data of the same kind of project from JSONBin endpoint in the cloud.
+        </p>
+      </section>
+
+      <div class="project-grid" id="projects-grid"></div>
+    </section>
         
     <section class="card">
       <h2>Highlights</h2>
