part 3 done with crud

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,8 @@
       <h2>My Projects</h2>
       <p>These are my projects that I worked on my free time</p>
 
+      <p><a href="crud.html">Manage Projects (CRUD)</a></p>
+
       <p>
         <button id="load-local">Load Local</button>
         <button id="load-remote">Load Remote</button>
